Item comment 반영 1. 기본 이미지 url 통일 2. 삭제시 post 요청
기능 추가
UserService: 토큰 정보로 유저 불러오기
Constants: 기본 URL 정보 저장

--- a/src/main/resources/templates/admin/item/read.html
+++ b/src/main/resources/templates/admin/item/read.html
@@ -7,6 +7,7 @@
     <script th:src="@{/js/admin/background/read.js}"></script>
 </th:block>
 -->
+
 <body>
 <div layout:fragment="content">
     <div class="text-end mb-3" style="margin-left: auto">
@@ -42,6 +43,12 @@
                         <a href="#" th:href="@{/admin/item/{id}/edit (id=${item.id})}" role="button">수정하기</a>
                     </td>
                     <td>
+                        <form th:action="|@{/admin/item/{id}/delete (id=${item.id})}|">
+                            <button formmethod="post" type="submit"
+                                    class="btn btn-primary" id="deleteBtn">
+                                <strong>삭제하기</strong>
+                            </button>
+                        </form>
                         <a href="#" th:href="@{/admin/item/{id}/delete (id=${item.id})}" role="button">삭제하기</a>
                     </td>
                     <td>
