영상 어드민 페이지 작성 완료, 문제 저장 및 읽기 작업 중

--- a/src/main/resources/templates/layouts/menu.html
+++ b/src/main/resources/templates/layouts/menu.html
@@ -87,6 +87,12 @@
             </a>
         </li>
         <li class="menu-item">
+            <a href="/admin/video" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-video"></i>
+                <div data-i18n="Extended UI">영상</div>
+            </a>
+        </li>
+        <li class="menu-item">
             <a href="/admin/character" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-crown"></i>
                 <div data-i18n="Boxicons">캐릭터</div>
