--- a/src/main/resources/templates/admin/video/read.html
+++ b/src/main/resources/templates/admin/video/read.html
@@ -3,12 +3,12 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/default}" lang="">
 <th:block layout:fragment="script">
-    <script th:src="@{/js/admin/question/read.js}"></script>
+    <script th:src="@{/js/admin/video/read.js}"></script>
 </th:block>
 <body>
 <div layout:fragment="content">
     <div class="text-end mb-3" style="margin-left: auto">
-        <button type="button" class="btn btn-l btn-primary" onclick="location.href='/admin/question/create'"><strong>생성하기</strong></button>
+        <button type="button" class="btn btn-l btn-primary" onclick="location.href='/admin/video/create'"><strong>생성하기</strong></button>
     </div>
     <div class="card">
         <h5 class="card-header">리스트</h5>
@@ -17,14 +17,11 @@
                 <thead>
                 <tr>
                     <th>이름</th>
-                    <th>타입</th>
-                    <th>질문</th>
-                    <th>옵션</th>
-                    <th>정답</th>
+                    <th>URL</th>
                     <th>액션</th>
                 </tr>
                 </thead>
-                <tbody class="table-border-bottom-0" id="questionTBody">
+                <tbody class="table-border-bottom-0" id="videoTBody">
 
                 </tbody>
             </table>
