문제 및 영상 어드민 페이지 완료

--- a/src/main/resources/templates/admin/question/read.html
+++ b/src/main/resources/templates/admin/question/read.html
@@ -12,16 +12,16 @@
     </div>
     <div class="card">
         <h5 class="card-header">리스트</h5>
-        <div class="table-responsive text-nowrap">
+        <div class="table-responsive">
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th>이름</th>
-                    <th>타입</th>
+                    <th class="text-nowrap">이름</th>
+                    <th class="text-nowrap">타입</th>
                     <th>질문</th>
                     <th>옵션</th>
-                    <th>정답</th>
-                    <th>액션</th>
+                    <th class="text-nowrap">정답</th>
+                    <th class="text-nowrap">액션</th>
                 </tr>
                 </thead>
                 <tbody class="table-border-bottom-0" id="questionTBody">
