--- a/src/main/resources/templates/admin/video/read.html
+++ b/src/main/resources/templates/admin/video/read.html
@@ -12,7 +12,7 @@
     </div>
     <div class="card">
         <h5 class="card-header">리스트</h5>
-        <div class="table-responsive text-nowrap">
+        <div class="table-responsive">
             <table class="table table-striped">
                 <thead>
                 <tr>
