SecurityConfig 상대경로 삭제 users 경로 앞에 admin/ 추가

--- a/src/main/resources/templates/login/index.html
+++ b/src/main/resources/templates/login/index.html
@@ -12,7 +12,7 @@
     <form action="/logout" method="post">
         <button type="submit">로그아웃</button>
     </form>
-    <button onclick="location.href='/users'" style="font-size: 17px">
+    <button onclick="location.href='/admin/users'" style="font-size: 17px">
         유저 리스트
     </button>
     <button onclick="location.href='/admin'" style="font-size: 17px">
