--- a/src/main/resources/templates/users/updateUserRole.html
+++ b/src/main/resources/templates/users/updateUserRole.html
@@ -31,7 +31,7 @@
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
-<button onclick="location.href='/users'" style="font-size: 17px">
+<button onclick="location.href='/admin/users'" style="font-size: 17px">
     유저 리스트
 </button>
 
