--- a/src/main/resources/templates/users/userList.html
+++ b/src/main/resources/templates/users/userList.html
@@ -29,7 +29,7 @@
                 <td th:text="${user.role.title}">
                 </td>
                 <td>
-                    <a href="#" th:href="@{/users/{id}/edit (id=${user.id})}" role="button">수정하기</a>
+                    <a href="#" th:href="@{/admin/users/{id}/edit (id=${user.id})}" role="button">수정하기</a>
                 </td>
                 <td>
 
