--- a/src/main/resources/templates/admin/character/create.html
+++ b/src/main/resources/templates/admin/character/create.html
@@ -78,6 +78,20 @@
                 </div>
                 <div class="col"></div>
             </div>
+            <div id="completeFrame" th:data-json="${character.completeMessages}">
+                <p class="col-form-label">만렙 완료 메세지</p>
+                <div id="completeInputBox">
+
+                </div>
+                <div class="row demo-vertical-spacing mb-3">
+                    <div class="col">
+                        <button type="button" class="btn btn-primary" id="addCompleteButton">+</button>
+                    </div>
+                    <div class="col text-end">
+                        <input class="btn btn-primary" type="button" value="삭제" id="removeCompleteBtn">
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
