영상 제공 관련 어드민 수정

--- a/src/main/resources/templates/admin/video/create.html
+++ b/src/main/resources/templates/admin/video/create.html
@@ -19,9 +19,9 @@
             </div>
             <div class="row demo-vertical-spacing mb-3">
                 <div class="col">
-                    <label for="urlInput" class="col-form-label">URL</label>
+                    <label for="fileInput" class="form-label">영상</label>
                     <div>
-                        <input class="form-control" type="url" id="urlInput">
+                        <input class="form-control" type="file" id="fileInput" accept="video/mp4">
                     </div>
                 </div>
             </div>
