--- a/src/main/resources/templates/admin/video/read.html
+++ b/src/main/resources/templates/admin/video/read.html
@@ -16,9 +16,9 @@
             <table class="table table-striped">
                 <thead>
                 <tr>
-                    <th>이름</th>
+                    <th class="text-nowrap">이름</th>
                     <th>URL</th>
-                    <th>액션</th>
+                    <th class="text-nowrap">액션</th>
                 </tr>
                 </thead>
                 <tbody class="table-border-bottom-0" id="videoTBody">
