--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -50,7 +50,6 @@
     <!-- Core CSS -->
     <link rel="stylesheet" href="/vendor/css/core.css" class="template-customizer-core-css"/>
     <link rel="stylesheet" href="/vendor/css/theme-default.css" class="template-customizer-theme-css"/>
-    <link rel="stylesheet" href="/static/css/demo.css"/>
 
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="/vendor/libs/perfect-scrollbar/perfect-scrollbar.css"/>
@@ -103,7 +102,7 @@
                                 document.write(new Date().getFullYear());
                             </script>
                             , made with ❤️ by
-                            <a href="https://themeselection.com" target="_blank" class="footer-link fw-bolder">ThemeSelection</a>
+                            <a href="https://themeselection.com" target="_blank" class="footer-link fw-bolder">Team 7</a>
                         </div>
                         <div>
                             <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
