--- a/src/main/resources/templates/layouts/menu.html
+++ b/src/main/resources/templates/layouts/menu.html
@@ -110,6 +110,12 @@
                 <div data-i18n="basic">아이템</div>
             </a>
         </li>
+        <li class="menu-item">
+            <a href="/admin/gifticon" class="menu-link">
+                <i class="menu-icon tf-icons bx bx-send"></i>
+                <div data-i18n="basic">기프티콘</div>
+            </a>
+        </li>
 
         <!-- Misc -->
         <li class="menu-header small text-uppercase"><span class="menu-header-text">기타</span></li>
