--- a/src/main/resources/templates/admin/gifticon/read.html
+++ b/src/main/resources/templates/admin/gifticon/read.html
@@ -71,6 +71,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
+                        <input class="form-control" type="text" id="sendId" style="display: none">
                         <div class="col">
                             <label for="modalUserEmail" class="col-form-label">유저 이메일</label>
                             <div>
