영상 어드민 수정 완료

--- a/src/main/resources/templates/admin/video/read.html
+++ b/src/main/resources/templates/admin/video/read.html
@@ -17,7 +17,7 @@
                 <thead>
                 <tr>
                     <th class="text-nowrap">이름</th>
-                    <th>URL</th>
+                    <th class="text-nowrap">URL</th>
                     <th class="text-nowrap">액션</th>
                 </tr>
                 </thead>
