--- a/src/main/resources/templates/admin/gifticon/read.html
+++ b/src/main/resources/templates/admin/gifticon/read.html
@@ -85,10 +85,8 @@
                             </div>
                         </div>
                         <div class="col">
-                            <label for="modalNumber" class="col-form-label">기프티콘 넘버</label>
-                            <div>
-                                <input class="form-control" type="text" id="modalNumber">
-                            </div>
+                            <label for="modalFile" class="form-label">기프티콘 파일 업로드</label>
+                            <input type="file" id="modalFile" class="form-control" accept="image/png, image/jpeg">
                         </div>
 
                     </div>
