기프티콘 이메일 유저 이메일로 가져오는 버그 해결

--- a/src/main/resources/templates/admin/gifticon/detail.html
+++ b/src/main/resources/templates/admin/gifticon/detail.html
@@ -65,6 +65,10 @@
                 <input class="form-control" type="text" id="isSend" th:value="${detail.isSend}" readonly>
             </div>
             <div class="mb-3">
+                <label for="email" class="form-label">전송한 이메일</label>
+                <input class="form-control" type="text" id="email" th:value="${detail.email}" readonly>
+            </div>
+            <div class="mb-3">
                 <label for="sendAdminName" class="form-label">보낸 어드민</label>
                 <input class="form-control" type="text" id="sendAdminName" th:value="${detail.sendAdminName}" readonly>
             </div>
