--- a/src/main/resources/templates/admin/gifticon/read.html
+++ b/src/main/resources/templates/admin/gifticon/read.html
@@ -12,7 +12,7 @@
         <div class="card-body">
             <div class="row">
                 <label for="emailSearch" class="form-label">이메일 검색</label>
-                <input type="text" class="form-control" id="emailSearch" placeholder="유저 이메일 (입력 x)"
+                <input type="text" class="form-control" id="emailSearch" placeholder="유저 이메일"
                        aria-describedby="defaultFormControlHelp">
             </div>
 
