slf4j + logback 로깅 기능 추가 및 여러 에러 해결

--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -63,7 +63,7 @@
 
     <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
-    <script src="/static/js/bootstrap/config.js"></script>
+    <script src="/js/bootstrap/config.js"></script>
     <!-- 각 페이지의 script가 작성될 위치 -->
     <th:block layout:fragment="script"></th:block>
     <!-- 각 페이지의 css가 작성될 위치 -->
@@ -150,12 +150,6 @@
 
 <!-- Vendors JS -->
 <script src="/vendor/libs/apex-charts/apexcharts.js"></script>
-
-<!-- Main JS -->
-<script src="/static/js/bootstrap/main.js"></script>
-
-<!-- Page JS -->
-<script src="/static/js/bootstrap/dashboards-analytics.js"></script>
 
 <!-- Place this tag in your head or just before your close body tag. -->
 <script async defer src="https://buttons.github.io/buttons.js"></script>
