--- a/src/main/resources/templates/layouts/nav.html
+++ b/src/main/resources/templates/layouts/nav.html
@@ -34,7 +34,7 @@
                 <a class="nav-link dropdown-toggle hide-arrow" href="javascript:void(0);"
                    data-bs-toggle="dropdown">
                     <div class="avatar avatar-online">
-                        <img src="/images/basicProfile.jpeg" alt class="w-px-40 h-auto rounded-circle"/>
+                        <img src="/images/vendor/icons/unicons/chart.png" alt class="w-px-40 h-auto rounded-circle"/>
                     </div>
                 </a>
                 <ul class="dropdown-menu dropdown-menu-end">
@@ -43,7 +43,7 @@
                             <div class="d-flex">
                                 <div class="flex-shrink-0 me-3">
                                     <div class="avatar avatar-online">
-                                        <img src="/images/basicProfile.jpeg" alt
+                                        <img src="/images/vendor/icons/unicons/chart.png" alt
                                              class="w-px-40 h-auto rounded-circle"/>
                                     </div>
                                 </div>
